# acopost

./: .travis.yml  AUTHORS  COPYING  Makefile.am  README  TODO  acopost.spec.in  config.h.in  configure.ac  rmfiles.sh  valgrind.sh
data/et/: known.etf
data/tbt/: transitions.tbt.templates
debian/: acopost.doc-base  acopost.links  acopost.postinst  changelog  control  copyright  files  postrm  preinst  prerm  watch
doc/: Makefile.am  acopost.7
doc/tr/: README
doc/ug/: Makefile  Makefile.am  acopost-users-guide.bib  acopost-users-guide.tex  ug.tex
doc/webpage/: README  index.html  style.css
examples/: Makefile.am
examples/et/: unknown.etf
examples/tbt/: unknown.tbt.templates
language-models/: Makefile.am
language-models/t3/: Makefile.am
language-models/t3/danish-pre-1948/: lex2  ngram2
resources/: default_tbt_templates  default_unknown.etf
src/: Makefile  Makefile.am  acopost_test.c  array.c  array.h  config-common.h  config.h  eqsort.c  eqsort.h  eqsort_test.c  et.c  gis.c  gis.h  hash.c  hash.h  iregister.c  iregister.h  lexicon.c  lexicon.h  lextest.c  ltest.c  mem.c  mem.h  met.c  option_mode.c  option_mode.h  options.c  options.h  options_test.c  primes.c  primes.h  sregister.c  sregister.h  t3.c  tbt.c  util.c  util.h  util_test.c
src/scripts/: Makefile.am  acopost-complementary-rate  acopost-cooked2fntbl  acopost-cooked2lex  acopost-cooked2ngram  acopost-cooked2raw  acopost-cooked2tt  acopost-cooked2wtree  acopost-evaluate  acopost-interchange-matrix  acopost-lex2theta  acopost-majority-voter  acopost-mean-and-sd  acopost-raw2tntraw  acopost-split-corpus  acopost-tt2cooked  acopost-unknown-word-ratio  acopost-wsj2cooked  cooked2lex  cooked2lex.pl  interchange-matrix.pl  prepare-corpus.sh  prepare-export.sh  raw2tntraw.pl
tests/: Makefile.am  test1.test.in
tests/data/: Makefile.am  random_corpus.lex  random_corpus.ngrams  random_corpus.txt
