etdir = $(prefix)/share/doc/acopost/examples/et
tbtdir = $(prefix)/share/doc/acopost/examples/tbt

et_myfiles = et/known.etf et/unknown.etf 
tbt_myfiles = tbt/transitions.tbt.templates tbt/unknown.tbt.templates

dist_et_DATA = $(et_myfiles)
dist_tbt_DATA = $(tbt_myfiles)

EXTRA_DIST = $(et_myfiles) $(tbt_myfiles)
