CLEANFILES = *~


PERLPROGS = \
     complementary-rate \
     cooked2fntbl \
     cooked2lex \
     cooked2ngram \
     cooked2raw \
     cooked2tt \
     cooked2wtree \
     evaluate \
     interchange-matrix \
     lex2theta \
     majority-voter \
     mean-and-sd \
     raw2tntraw \
     split-corpus \
     tt2cooked \
     unknown-word-ratio \
     wsj2cooked 

PYTHONPROGS = \
     cooked2lex.py


dist_bin_SCRIPTS = $(PERLPROGS)
dist_noinst_SCRIPTS = $(PYTHONPROGS)

