CLEANFILES = *~


PERLPROGS = \
     acopost-cooked2fntbl \
     acopost-cooked2lex \
     acopost-cooked2ngram \
     acopost-cooked2raw \
     acopost-cooked2tt \
     acopost-cooked2wtree \
     acopost-lex2theta \
     acopost-raw2tntraw \
     acopost-tt2cooked \
     acopost-wsj2cooked  \
     acopost-majority-voter \
     acopost-evaluate \
     acopost-complementary-rate \
     acopost-interchange-matrix \
     acopost-mean-and-sd \
     acopost-split-corpus \
     acopost-unknown-word-ratio

PYTHONPROGS = \
     acopost-cooked2lex.py


dist_bin_SCRIPTS = $(PERLPROGS)
dist_noinst_SCRIPTS = $(PYTHONPROGS)

